some minor file reorg and installed and configured ejs templating engine

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -7,9 +7,11 @@
     <title>Parse</title>
 </head>
 <body>
-    <form>
+    <h1>EQ2 log parse</h1>
+    <form action="/data" method="GET">
         <!-- post a array of player names -->
         
     </form>
+    <script src="./script.js"></script>
 </body>
 </html>
